<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My App Hub</string>
    <string name="header">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="scores_app">Scores App</string>
    <string name="library_app">Library App</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="capstone">Capstone</string>

</resources>
